--- a/package.json
+++ b/package.json
@@ -1,29 +1,22 @@
 {
-  "name": "json",
+  "name": "rabbit",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
+  "description": "Mock data for My Five",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/My-Five/json.git"
+    "url": "git+https://github.com/My-Five/rabbit.git"
   },
-  "author": "",
+  "author": "Tyler Waitt",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/My-Five/json/issues"
-  },
-  "homepage": "https://github.com/My-Five/json#readme",
   "dependencies": {
-    "javascript-time-ago": "^2.5.9",
     "json-server": "^0.17.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
-    "@types/node": "^18.11.9"
+    "javascript-time-ago": "^2.5.9",
   }
 }
