--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Mock data for My Five",
   "main": "server.js",
+  "type":"module",
   "scripts": {
     "start": "node server.js"
   },
